[package]
name = "tonic-autometrics"
version = "0.1.0"
edition = "2021"

[dependencies]
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
tonic-health = "0.10"
warp = "0.3"

[build-dependencies]
tonic-build = "0.10"
